# vibe

./: .gitignore  AGENTS.md  README.md
.claude/: CLAUDE.md
docs/: human_guardrails.md
docs/styles/: python.ko.md  python.md  rust.ko.md  rust.md
examples/ring-buffer/: Cargo.toml  README.md
examples/ring-buffer/examples/: queue.rs
examples/ring-buffer/src/: lib.rs
vibe-review/: .gitignore  Cargo.toml  README.md
vibe-review/vibe-review/: Cargo.toml
vibe-review/vibe-review/prompts/: system.md
vibe-review/vibe-review/src/: client.rs  context.rs  filter.rs  git.rs  main.rs  output.rs  prompt.rs
