[package]
name = "vibe-review"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
globset = "0.4.18"
ignore = "0.4.25"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
